# Smart-Stadiums-Tournament-Operations

./: .claude.md  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: assistant.py  data.py  main.py  offline.py  schemas.py  tools.py
data/: venues.json
plans/: 01-accessmate.md
static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_assistant.py  test_data.py  test_integration.py  test_offline.py  test_rate_limiter.py  test_stream.py  test_tools.py
