[project]
name = "accessmate"
version = "1.0.0"
description = "Accessibility-first stadium copilot for the FIFA World Cup 2026 (Smart Stadiums & Tournament Operations)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "google-genai>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.30",
    "pydantic>=2.0",
]

[tool.pytest.ini_options]
# Run the suite with `python -m pytest` from the project root.
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Silence third-party deprecation noise (google-genai, starlette testclient)
    # so real warnings from our code stay visible.
    "ignore::DeprecationWarning:google.genai.types",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.ruff]
# Lint with `python -m ruff check app tests` (see requirements-dev.txt).
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import order)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modern syntax)
    "B",   # flake8-bugbear (likely bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-native rules
    "COM812", # missing trailing comma
    "ANN401", # disallow bare `Any` in signatures (use `object` at boundaries)
    "BLE001", # no blind `except Exception` without justification
    "D104",   # undocumented public package
    "D107",   # undocumented `__init__`
    "D205",   # missing blank line after docstring summary
    "D209",   # multi-line docstring closing quotes on their own line
    "D401",   # docstring summary in imperative mood
    "FAST001", # redundant FastAPI response_model
    "FAST002", # FastAPI dependency without Annotated
    "PLC0415", # import not at top-level (flag; justify or move per-case)
    "PLR0911", # too many return statements
    "PLW0603", # global statement (prefer a holder object)
    "S311",    # non-cryptographic random usage (flag; justify if intentional)
]
# The Arabic keyword tables and their docstrings legitimately contain letters
# the confusable detector maps to Latin lookalikes.
allowed-confusables = ["ا", "أ", "إ", "آ", "ئ", "ي", "و", "ه"]

[tool.ruff.lint.per-file-ignores]
# Test fakes deliberately mirror the google-genai client attribute shape
# (`client.models.generate_content`), so the inner class is named `models`.
# PLC0415 is also ignored here: importing inside a test function is the
# idiomatic way to scope a monkeypatch target to a single test.
"tests/*" = ["N801", "PLC0415"]

[tool.mypy]
# Type-check with `python -m mypy app` (see requirements-dev.txt).
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100
